
add_executable(array        01Array.cpp)
add_executable(vector       02Vector.cpp)
add_executable(list         03List.cpp)
add_executable(set          04Set.cpp)
add_executable(map          05Map.cpp)
add_executable(unordered    06Unordered.cpp)
add_executable(queue        07Queue.cpp)
add_executable(stlString    08String.cpp)           